--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             // populate crystal values
             for (var x = 0; x <4; x++){
                 var random = Math.floor(Math.random()*12) + 1;
-              console.log(random)
+            //   console.log(random)
                 // numberOptions.push(random);   
                 imageCrystals[x].attr("data-crystalvalue", random);    
             }; 
